@@ -7,21 +7,46 @@ import com.dream.container.utils.DreamUtils;
 
 import java.io.File;
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.net.JarURLConnection;
 import java.net.URL;
 import java.util.*;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
 import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
+import java.util.stream.Collectors;
 
 public abstract class Initializer
 {
     private static final String PROTOCOL_FILE = "file";
     private static final String PROTOCOL_JAR = "jar";
     private static final String ARG_NAME_EXEC_PRIORITY = "-exec_priority";
+    private static final String ARG_STANDALONE_THREADS = "-standalone_threads";
 
     private static final String MODULE_CONTAINER = "com.dream.container";
     private static final String MODULE_SERVICE = "com.dream.service";
+
+    /**
+     * Exec注解的运行策略为【ASYNC】时会用到这个线程池
+     */
+    private static final ExecutorService THREAD_POOL_SYNC = Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors());
+
+    /**
+     * Exec注解的运行策略为【STANDALONE】时会用到这个线程池, 此线程池的线程数通过命令参数配置{@link Initializer#ARG_STANDALONE_THREADS}
+     */
+    private static ExecutorService THREAD_POOL_STANDALONE;
+
+    /**
+     * {@link Initializer#THREAD_POOL_STANDALONE} 线程池的默认线程数量
+     */
+    private static int STANDALONE_THREADS = 10;
+
+    /**
+     * {@link Initializer#THREAD_POOL_STANDALONE} 线程池已挂起【已使用】的线程数
+     */
+    private static int USED_STANDALONE_THREADS = 0;
 
     /**
      *  初始化
@@ -34,24 +59,51 @@ public abstract class Initializer
     {
         try
         {
+            if (args != null && args.length > 0)
+            {
+                LaunchParams.LAUNCH_ARGS = new HashMap<>(16);
+
+                for (int i = 0; i < args.length; i+=2)
+                {
+                    String argName = args[i];
+                    String argValue = args[i + 1];
+
+                    LaunchParams.LAUNCH_ARGS.put(argName, argValue);
+                }
+            }
+
+            String threads = LaunchParams.getLaunchArg(ARG_STANDALONE_THREADS);
+            if (threads != null)
+            {
+                STANDALONE_THREADS = Integer.parseInt(threads);
+            }
+
+            THREAD_POOL_STANDALONE = Executors.newFixedThreadPool(STANDALONE_THREADS);
+
             InitializeArgs initializeArgs = launchClass.getAnnotation(InitializeArgs.class);
 
             InitializeTemporaryParams temporaryParams = new InitializeTemporaryParams(
-                    new DefaultComponentContainer(),
                     new DefaultComponentContainer(),
                     DreamUtils.combine(initializeArgs.dependenceHandlers(), LaunchArgumentsHandler.class),
                     DreamUtils.combine(initializeArgs.containers(), ProxyPostProcessorContainer.class, ConfigContainer.class),
                     initializeArgs.databaseManager());
 
-            parseHosting(args);
-
-            List<String> scanPackages = List.of(launchClass.getPackageName(), MODULE_SERVICE, MODULE_CONTAINER);
+            List<String> scanPackages = Arrays.asList(
+                    launchClass.getPackage().getName(),
+                    MODULE_SERVICE,
+                    MODULE_CONTAINER
+            );
 
             for (String scanPackage : scanPackages)
             {
                 String packagePath = scanPackage.replace('.', '/');
 
                 URL resource = DreamUtils.getResource(packagePath);
+
+                if (resource == null)
+                {
+                    continue;
+                }
 
                 if (PROTOCOL_FILE.equalsIgnoreCase(resource.getProtocol()))
                 {
@@ -65,29 +117,12 @@ public abstract class Initializer
             }
 
             postHandleDependent(temporaryParams);
-
             LogContainer.LOG.info("container initialized");
         }
         catch (Throwable e)
         {
             LogContainer.LOG.error("initialize error", e);
             System.exit(0);
-        }
-    }
-
-    private static void parseHosting(String[] args)
-    {
-        if (args != null && args.length > 0)
-        {
-            Params.LAUNCH_ARGS = new HashMap<>(16);
-
-            for (int i = 0; i < args.length; i+=2)
-            {
-                String argName = args[i];
-                String argValue = args[i + 1];
-
-                Params.LAUNCH_ARGS.put(argName, argValue);
-            }
         }
     }
 
@@ -129,7 +164,7 @@ public abstract class Initializer
         List<JarEntry> scannedClasses = jarFile.stream()
                 .filter(j -> !j.isDirectory())
                 .filter(j -> j.getName().startsWith(packagePath))
-                .toList();
+                .collect(Collectors.toList());
 
         for (JarEntry entry : scannedClasses)
         {
@@ -148,15 +183,7 @@ public abstract class Initializer
 
         if (clazz.isAnnotationPresent(Component.class))
         {
-            Component annotation = clazz.getAnnotation(Component.class);
-            if (annotation.instant())
-            {
-                temporaryParams.getInstantComponents().add(clazz);
-            }
-            else
-            {
-                temporaryParams.getComponentContainer().add(clazz);
-            }
+            temporaryParams.getComponentContainer().add(clazz);
         }
         else
         {
@@ -178,10 +205,8 @@ public abstract class Initializer
     private static void postHandleDependent(InitializeTemporaryParams temporaryParams) throws Exception
     {
         ComponentContainer componentContainer = temporaryParams.getComponentContainer();
-        ComponentContainer instantComponents = temporaryParams.getInstantComponents();
-
         ComponentContainer pendingHandleContainer = new DefaultComponentContainer();
-        pendingHandleContainer.combineContainer(componentContainer, instantComponents);
+        pendingHandleContainer.combineContainer(componentContainer);
 
         Map<Class<? extends Container>, Container> customizeContainers = temporaryParams.getCustomizeContainers();
         for (Map.Entry<Class<? extends Container>, Container> entry : customizeContainers.entrySet())
@@ -193,7 +218,7 @@ public abstract class Initializer
 
         for (DependenceHandler dependenceHandler : dependenceHandlers)
         {
-            dependenceHandler.initializeComponents(instantComponents, componentContainer);
+            dependenceHandler.initializeComponents(componentContainer);
         }
 
         // 循环过程中添加的component
@@ -279,33 +304,63 @@ public abstract class Initializer
                         }
                         else
                         {
-                            listDep = List.of(new DependencyDesc(
+                            listDep = Collections.singletonList(new DependencyDesc(
                                     method.getReturnType(), method.invoke(definition.getOriginalInstance()), annotation.uid()));
                         }
 
                         for (DependencyDesc dependencyDesc : listDep)
                         {
                             InstanceDefinition pushDefinition = new InstanceDefinition();
-                            pushDefinition.setOriginalInstance(dependencyDesc.instance());
+                            pushDefinition.setOriginalInstance(dependencyDesc.getInstance());
 
-                            Map<String, InstanceDefinition> insMap = loopingPutComponents.computeIfAbsent(dependencyDesc.clazz(), m -> new HashMap<>());
-                            insMap.put(dependencyDesc.uid(), pushDefinition);
+                            Map<String, InstanceDefinition> insMap = loopingPutComponents
+                                    .computeIfAbsent(dependencyDesc.getClazz(), m -> new HashMap<>());
+                            insMap.put(dependencyDesc.getUid(), pushDefinition);
                         }
                     }
                     else if (method.isAnnotationPresent(Exec.class))
                     {
                         Exec annotation = method.getDeclaredAnnotation(Exec.class);
 
-                        String levelArgValue = Params.LAUNCH_ARGS.get(ARG_NAME_EXEC_PRIORITY);
+                        String levelArgValue = LaunchParams.getLaunchArg(ARG_NAME_EXEC_PRIORITY);
 
-                        int level = levelArgValue == null ? 0 : Integer.parseInt(levelArgValue);
+                        int level = levelArgValue == null ? 1 : Integer.parseInt(levelArgValue);
 
-                        if (annotation.value().getLevel() > level)
+                        if (annotation.value().getLevel() >= level)
                         {
-                            continue;
-                        }
+                            if (EExecRunPriority.STANDALONE == annotation.runPriority())
+                            {
+                                if (USED_STANDALONE_THREADS == STANDALONE_THREADS)
+                                {
+                                    throw new IllegalStateException("独立线程池资源耗尽, 请增大命令行参数(-standalone_threads)的数值");
+                                }
 
-                        method.invoke(definition.getOriginalInstance());
+                                USED_STANDALONE_THREADS++;
+                                THREAD_POOL_STANDALONE.execute(() -> {
+                                    try {
+                                        method.invoke(definition.getOriginalInstance());
+                                    }
+                                    catch (IllegalAccessException | InvocationTargetException e) {
+                                        LogContainer.LOG.error("exec error", e);
+                                    }
+                                });
+                            }
+                            else if (EExecRunPriority.ASYNC == annotation.runPriority())
+                            {
+                                THREAD_POOL_SYNC.execute(() -> {
+                                    try {
+                                        method.invoke(definition.getOriginalInstance());
+                                    }
+                                    catch (IllegalAccessException | InvocationTargetException e) {
+                                        LogContainer.LOG.error("exec error", e);
+                                    }
+                                });
+                            }
+                            else
+                            {
+                                method.invoke(definition.getOriginalInstance());
+                            }
+                        }
                     }
                 }
             }
